# bentosim

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
bentosim/: __init__.py  __main__.py
bentosim/aquarium/: __init__.py  art.py  cli.py  config.py  entities.py  environment.py  hud.py  menu.py  sim.py  themes.py
bentosim/core/: __init__.py  colors.py  terminal.py
screenshots/: README.md
