[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bentosim"
version = "0.1.0"
description = "Terminal-based visual simulation engine. First module: an advanced aquarium."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Bentosim contributors" },
]
keywords = ["terminal", "tui", "curses", "aquarium", "simulation", "ascii", "ansi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
# Sıfır runtime bağımlılığı — sadece stdlib kullanıyoruz.
# (Windows kullanıcıları için curses isteğe bağlı extra olarak.)
dependencies = []

[project.optional-dependencies]
windows = ["windows-curses>=2.3.0; sys_platform == 'win32'"]

[project.scripts]
bentosim = "bentosim.__main__:main"

[project.urls]
Homepage   = "https://github.com/kizilcahmet98/bentosim"
Repository = "https://github.com/kizilcahmet98/bentosim"
Issues     = "https://github.com/kizilcahmet98/bentosim/issues"

[tool.setuptools.packages.find]
include = ["bentosim*"]
exclude = ["screenshots*", "tests*"]
